--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="content">
       <section class="result">
         <div class="result__video-container">
-          <video src="" controls class="result__video" poster=""></video>
+          <video src="" controls  class="result__video" poster=""></video>
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
@@ -54,7 +54,7 @@
               </label>
               <label class="search-form__label">
                 <input
-                  type="checkbox"
+                  type="checkbox" 
                   name="time"
                   value="night"
                   class="search-form__checkbox visually-hidden"
@@ -94,8 +94,8 @@
 
     <template class="cards-list-item-template">
       <li class="content__list-item">
-        <a href="#0" class="content__card-link">
-          <article class="content__video-card">
+        <a href="#0" class="content__card-link ">
+          <article class="content__video-card ">
             <div class="content__video-card-description-container">
               <h2 class="content__video-card-title"></h2>
               <p class="content__video-card-description"></p>
@@ -106,7 +106,7 @@
       </li>
     </template>
     <template class="more-button-template">
-      <li><button class="button more-button">Показать еще</button></li>
+      <li><button type="search" class="button more-button">Показать еще</button></li>
     </template>
 
     <template class="error-template">
